--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "clean-deep": "^3.4.0",
     "flat": "^5.0.2",
+    "moment": "^2.28.0",
     "xml2js": "^0.4.23",
     "xml2json": "^0.12.0"
   }
